--- a/_config.yml
+++ b/_config.yml
@@ -59,21 +59,21 @@ plugins:
 
 author:
   name   : "Elin Ahlstrand"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/posts/ElinAhlstrand_profile.png"
   bio    : "neuroscientist, autodidact, self-experimenter"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
+  #  - label: "Website"
+  #    icon: "fas fa-fw fa-link"
+   #   url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/mindnotmad"
    # - label: "GitHub"
    #   icon: "fab fa-fw fa-github"
    #   url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram/"
-      url: "https://instagram.com/elinahlstrand"
+    #- label: "Instagram"
+    #  icon: "fab fa-fw fa-instagram/"
+    #  url: "https://instagram.com/elinahlstrand"
 
 footer:
   links:
@@ -83,9 +83,9 @@ footer:
     #- label: "GitHub"
     #  icon: "fab fa-fw fa-github"
     #  url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/elinahlstrand"
+   # - label: "Instagram"
+    #  icon: "fab fa-fw fa-instagram"
+    #  url: "https://instagram.com/elinahlstrand"
 
 defaults:
   # _posts
