--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl:
 url: https://xenoneuronaut.github.io
 twitter_username: mindnotmad
 github_username: xenoneuronaut
-minimal_mistakes_skin: contrast
+minimal_mistakes_skin: default
 search: true
 
 # Build settings
@@ -36,9 +36,7 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 include:
   - _pages
   - _posts
-  - assets/images
-  - assets/files
-
+  - assets
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
@@ -62,7 +60,7 @@ plugins:
 
 author:
   name   : "Elin Ahlstrand"
-  avatar : "/assets/images/posts/ElinAhlstrand_profile.png"
+  avatar : "/assets/images/ElinAhlstrand_profile.png"
   bio    : "neuroscientist, autodidact, self-experimenter"
   links:
   #  - label: "Website"
