--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl:
 url: https://xenoneuronaut.github.io
 twitter_username: mindnotmad
 github_username: xenoneuronaut
-minimal_mistakes_skin: default
+minimal_mistakes_skin: contrast
 search: true
 
 # Build settings
@@ -100,7 +100,6 @@ defaults:
       comments: true
       share: true
       related: true
-      classes: wide
   # _pages
   - scope:
       path: "_pages"
