--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ baseurl:
 url: https://xenoneuronaut.github.io
 twitter_username: mindnotmad
 github_username: xenoneuronaut
-minimal_mistakes_skin: neon
+minimal_mistakes_skin: dark
 search: true
 
 
