--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ defaults:
     values:
       layout: single
       classes: wide
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: true
       share: true
