--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,8 @@ main:
     url: /about/
   - title: "Posts"
     url: /posts/
+  - title: "Collections"
+    url: /collections/
   - title: "Tags"
     url: /tags/
   - title: "Files"
