--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 main:
-  - title: "About"
+  - title: "about"
     url: /about/
-  - title: "Posts"
+  - title: "posts"
     url: /posts/
-  - title: "Collections"
+  - title: "collections"
     url: /collections/
-  - title: "Tags"
+  - title: "tags"
     url: /tags/
-  - title: "Files"
+  - title: "files"
     url: /files/
