--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
     url: /about/
   - title: "posts"
     url: /posts/
-  - title: "collections"
-    url: /collections/
+  # - title: "collections"
+  #   url: /collections/
   - title: "tags"
     url: /tags/
   - title: "files"
