--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     url: /posts/
   # - title: "collections"
   #   url: /collections/
-  - title: "tags"
-    url: /tags/
-  - title: "files"
-    url: /files/
+  # - title: "tags"
+  #   url: /tags/
+  # - title: "files"
+  #   url: /files/
